==> hazy1k/STM32-Study-Notes/3.开发板必备资料/模块资料/ADC_DAC/野火【ADC_AD7192】模块资料/2-配套程序/F103指南者开发板/AD7192-2路差分连续转换输出（标准库）/User/ad7192/bsp_ad7192.c <==
#include "./ad7192/bsp_ad7192.h"
#include <string.h>
#include <stdio.h>

void AD7192_Init(void)
{
	SPI_InitTypeDef  SPI_InitStructure;
  GPIO_InitTypeDef GPIO_InitStructure;	
  /* 使能SPI外设以及SPI引脚时钟 */
	/* 使能SPI时钟 */
	AD7192_SPI_APBxClock_FUN ( AD7192_SPI_CLK, ENABLE );
	
	/* 使能SPI引脚相关的时钟 */
 	AD7192_SPI_CS_APBxClock_FUN ( AD7192_SPI_CS_CLK|AD7192_SPI_SCK_CLK|
																	AD7192_SPI_MISO_PIN|AD7192_SPI_MOSI_PIN, ENABLE );
	/* 配置SPI的 CS引脚，普通IO即可 */
  GPIO_InitStructure.GPIO_Pin = AD7192_SPI_CS_PIN;
	GPIO_InitStructure.GPIO_Speed = GPIO_Speed_50MHz;
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_Out_PP;
  GPIO_Init(AD7192_SPI_CS_PORT, &GPIO_InitStructure);	
	
  /* 配置SPI的 SCK引脚*/
  GPIO_InitStructure.GPIO_Pin = AD7192_SPI_SCK_PIN;
  GPIO_InitStructure.GPIO_Mode = GPIO_Mode_AF_PP;
  GPIO_Init(AD7192_SPI_SCK_PORT, &GPIO_InitStructure);

  /* 配置SPI的 MISO引脚*/
  GPIO_InitStructure.GPIO_Pin = AD7192_SPI_MISO_PIN;
  GPIO_Init(AD7192_SPI_MISO_PORT, &GPIO_InitStructure);

  /* 配置SPI的 MOSI引脚*/
  GPIO_InitStructure.GPIO_Pin = AD7192_SPI_MOSI_PIN;
  GPIO_Init(AD7192_SPI_MOSI_PORT, &GPIO_InitStructure);
  


	/* SPI 模式配置 */
  SPI_InitStructure.SPI_Direction = SPI_Direction_2Lines_FullDuplex;
  SPI_InitStructure.SPI_Mode = SPI_Mode_Master;
  SPI_InitStructure.SPI_DataSize = SPI_DataSize_8b;
  SPI_InitStructure.SPI_CPOL = SPI_CPOL_High;
  SPI_InitStructure.SPI_CPHA = SPI_CPHA_2Edge;
  SPI_InitStructure.SPI_NSS = SPI_NSS_Soft;
  SPI_InitStructure.SPI_BaudRatePrescaler = SPI_BaudRatePrescaler_32;
  SPI_InitStructure.SPI_FirstBit = SPI_FirstBit_MSB;
  SPI_InitStructure.SPI_CRCPolynomial = 7;
  SPI_Init(AD7192_SPIx , &SPI_InitStructure);

  /* 使能 SPI  */
  SPI_Cmd(AD7192_SPIx , ENABLE);

  
  /* 片选使能 */
  AD7192_CS_ENABLE();
}

uint32_t AD7192ReadConvertingData(void)
{
	unsigned char WriteBuf[4];
	unsigned char ReadBuf[4];
	unsigned long int DataBuffer;

	//AD7192_CS_ENABLE();//片选信号使能，选通AD7192。
	WriteBuf[0] = WEN|RW_R|((REG_DATA)<<3)|CREAD_DIS;	 

	AD7192readdata(WriteBuf, ReadBuf, 1);//首先写入通信寄存器，确认下一步操作是读取数据寄存器

	WriteBuf[0] = NOP;
	WriteBuf[1] = NOP;	
	WriteBuf[2] = NOP;
	WriteBuf[3]	= NOP;

	while(GPIO_ReadInputDataBit(AD7192_SPI_MISO_PORT,AD7192_SPI_MISO_PIN)== 0){;}			
	while(GPIO_ReadInputDataBit(AD7192_SPI_MISO_PORT,AD7192_SPI_MISO_PIN)== 1){;}			//	waiting the 1st RDY failling edge;即DOUT变为低电平。

	if ((AD7192Registers[REG_MODE] & DAT_STA_EN) == DAT_STA_EN)
  {
		AD7192readdata(WriteBuf, ReadBuf, 4);	  
		DataBuffer = ReadBuf[0];
		DataBuffer = (DataBuffer<<8) + ReadBuf[1];
		DataBuffer = (DataBuffer<<8) + ReadBuf[2];
		DataBuffer = (DataBuffer<<8) + ReadBuf[3];
  }
	else 
  {
		AD7192readdata(WriteBuf, ReadBuf, 3);	   //do not transfer the status contents after read data register 
		DataBuffer = ReadBuf[0];
		DataBuffer = (DataBuffer<<8) + ReadBuf[1];
		DataBuffer = (DataBuffer<<8) + ReadBuf[2];
  }

	return DataBuffer;
}

uint32_t AD7192ContinuousRead()
{
	unsigned char WriteBuf[4];
	unsigned char ReadBuf[4];
	unsigned long int DataBuffer;//无符号32位长整型数据缓存变量。

	WriteBuf[0] = NOP;
	WriteBuf[1] = NOP;	
	WriteBuf[2] = NOP;
	WriteBuf[3]	= NOP;

	while(GPIO_ReadInputDataBit(AD7192_SPI_MISO_PORT,AD7192_SPI_MISO_PIN)== 0){;}			
	while(GPIO_ReadInputDataBit(AD7192_SPI_MISO_PORT,AD7192_SPI_MISO_PIN)== 1){;}			//	waiting the 1st RDY failling edge;即DOUT变为低电平。

	if ((AD7192Registers[REG_MODE] & DAT_STA_EN) == DAT_STA_EN)	//多通道使能，将状态寄存器的内容附加到数据寄存器24位的数据上，所以此情况是读4个字节。
  {
		AD7192readdata(WriteBuf, ReadBuf, 4);	  
		DataBuffer = ReadBuf[0];
		DataBuffer = (DataBuffer<<8) + ReadBuf[1];
		DataBuffer = (DataBuffer<<8) + ReadBuf[2];
		DataBuffer = (DataBuffer<<8) + ReadBuf[3];
  }
	else 
  {
		AD7192readdata(WriteBuf, ReadBuf, 3);	   //do not transfer the status contents after read data register 
		DataBuffer = 0x00;
		DataBuffer = (DataBuffer<<8) + ReadBuf[0];	
		DataBuffer = (DataBuffer<<8) + ReadBuf[1];
		DataBuffer = (DataBuffer<<8) + ReadBuf[2];
  }

	return DataBuffer;
}

void AD7192ExitContinuousRead()
{
	unsigned char WriteBuf[1];
	unsigned char ReadBuf[1];

	while(GPIO_ReadInputDataBit(AD7192_SPI_MISO_PORT,AD7192_SPI_MISO_PIN)== 0){;}			
	while(GPIO_ReadInputDataBit(AD7192_SPI_MISO_PORT,AD7192_SPI_MISO_PIN)== 1){;}			//	waiting the 1st RDY failling edge;即DOUT变为低电平。

	WriteBuf[0]	= WEN|RW_R|(REG_DATA<<3)|CREAD_DIS;

	AD7192readdata(WriteBuf, ReadBuf, 1);		
}
