==> hazy1k/STM32-Study-Notes/3.开发板必备资料/模块资料/ADC_DAC/野火【ADC_AD7192】模块资料/2-配套程序/H743繁星开发板/AD7192-电子秤-串口显示/User/ad7192/bsp_ad7192.c <==
#include "./ad7192/bsp_ad7192.h"
#include "./usart/bsp_debug_usart.h"
#include <string.h>

void AD7192_Init(void)
{
  GPIO_InitTypeDef GPIO_InitStruct;
  /* 使能SPI外设以及SPI引脚时钟 */
  AD7192_SPIx_CLK_ENABLE();
  AD7192_GPIO_CLK_ENABLE();
  
  GPIO_InitStruct.Pin = AD7192_MISO_Pin|AD7192_MOSI_Pin|AD7192_SCK_Pin;
	GPIO_InitStruct.Mode = GPIO_MODE_AF_PP;
	GPIO_InitStruct.Pull = GPIO_NOPULL;
	GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_HIGH;
	GPIO_InitStruct.Alternate = GPIO_AF5_SPI2;
  HAL_GPIO_Init(AD7192_MISO_GPIO_Port, &GPIO_InitStruct);
  
  GPIO_InitStruct.Pin = AD7192_CS_Pin;
  GPIO_InitStruct.Mode = GPIO_MODE_OUTPUT_PP;
  GPIO_InitStruct.Pull = GPIO_NOPULL;
  GPIO_InitStruct.Speed = GPIO_SPEED_FREQ_LOW;
  HAL_GPIO_Init(AD7192_CS_GPIO_Port, &GPIO_InitStruct);  
  
  /* SPI外设配置 */
  hspi_AD7192.Instance = AD7192_SPIx;
  hspi_AD7192.Init.Mode = SPI_MODE_MASTER;
  hspi_AD7192.Init.Direction = SPI_DIRECTION_2LINES;
  hspi_AD7192.Init.DataSize = SPI_DATASIZE_8BIT;
  hspi_AD7192.Init.CLKPolarity = SPI_POLARITY_HIGH;
  hspi_AD7192.Init.CLKPhase = SPI_PHASE_2EDGE;
  hspi_AD7192.Init.NSS = SPI_NSS_SOFT;
  hspi_AD7192.Init.BaudRatePrescaler = SPI_BAUDRATEPRESCALER_32;
  hspi_AD7192.Init.FirstBit = SPI_FIRSTBIT_MSB;
  hspi_AD7192.Init.TIMode = SPI_TIMODE_DISABLE;
  hspi_AD7192.Init.CRCCalculation = SPI_CRCCALCULATION_DISABLE;
  hspi_AD7192.Init.CRCPolynomial = 7;
	
	hspi_AD7192.Init.NSSPMode = SPI_NSS_PULSE_DISABLE;
  hspi_AD7192.Init.NSSPolarity = SPI_NSS_POLARITY_LOW;
  hspi_AD7192.Init.FifoThreshold = SPI_FIFO_THRESHOLD_01DATA;
  hspi_AD7192.Init.MasterSSIdleness = SPI_MASTER_SS_IDLENESS_00CYCLE;
  hspi_AD7192.Init.MasterInterDataIdleness = SPI_MASTER_INTERDATA_IDLENESS_00CYCLE;
  hspi_AD7192.Init.MasterReceiverAutoSusp = SPI_MASTER_RX_AUTOSUSP_ENABLE;
  hspi_AD7192.Init.MasterKeepIOState = SPI_MASTER_KEEP_IO_STATE_ENABLE;
  HAL_SPI_Init(&hspi_AD7192);
  
  /* 片选使能 */
  AD7192_CS_ENABLE();
}

uint32_t AD7192ReadConvertingData(void)
{
	unsigned char WriteBuf[4];
	unsigned char ReadBuf[4];
	unsigned long int DataBuffer;

//	AD7192_CS_ENABLE();//片选信号使能，选通AD7192。
	WriteBuf[0] = WEN|RW_R|((REG_DATA)<<3)|CREAD_DIS;	 

	AD7192readdata(WriteBuf, ReadBuf, 1);//首先写入通信寄存器，确认下一步操作是读取数据寄存器

	WriteBuf[0] = NOP;
	WriteBuf[1] = NOP;	
	WriteBuf[2] = NOP;
	WriteBuf[3]	= NOP;

	while(HAL_GPIO_ReadPin(AD7192_MISO_GPIO_Port,AD7192_MISO_Pin)== 0){;}			
	while(HAL_GPIO_ReadPin(AD7192_MISO_GPIO_Port,AD7192_MISO_Pin)== 1){;}			//	waiting the 1st RDY failling edge;即DOUT变为低电平。

	if ((AD7192Registers[REG_MODE] & DAT_STA_EN) == DAT_STA_EN)
  {
		AD7192readdata(WriteBuf, ReadBuf, 4);	  
		DataBuffer = ReadBuf[0];
		DataBuffer = (DataBuffer<<8) + ReadBuf[1];
		DataBuffer = (DataBuffer<<8) + ReadBuf[2];
		DataBuffer = (DataBuffer<<8) + ReadBuf[3];
  }
	else 
  {
		AD7192readdata(WriteBuf, ReadBuf, 3);	   //do not transfer the status contents after read data register 
		DataBuffer = ReadBuf[0];
		DataBuffer = (DataBuffer<<8) + ReadBuf[1];
		DataBuffer = (DataBuffer<<8) + ReadBuf[2];
  }

	return DataBuffer;
}

uint32_t AD7192ContinuousRead()
{
	unsigned char WriteBuf[4];
	unsigned char ReadBuf[4];
	unsigned long int DataBuffer;//无符号32位长整型数据缓存变量。

	WriteBuf[0] = NOP;
	WriteBuf[1] = NOP;	
	WriteBuf[2] = NOP;
	WriteBuf[3]	= NOP;

	while(HAL_GPIO_ReadPin(AD7192_MISO_GPIO_Port,AD7192_MISO_Pin)== 0){;}			
	while(HAL_GPIO_ReadPin(AD7192_MISO_GPIO_Port,AD7192_MISO_Pin)== 1){;}			//	waiting the 1st RDY failling edge;即DOUT变为低电平。

	if ((AD7192Registers[REG_MODE] & DAT_STA_EN) == DAT_STA_EN)	//多通道使能，将状态寄存器的内容附加到数据寄存器24位的数据上，所以此情况是读4个字节。
  {
		AD7192readdata(WriteBuf, ReadBuf, 4);	  
		DataBuffer = ReadBuf[0];
		DataBuffer = (DataBuffer<<8) + ReadBuf[1];
		DataBuffer = (DataBuffer<<8) + ReadBuf[2];
		DataBuffer = (DataBuffer<<8) + ReadBuf[3];
  }
	else 
  {
		AD7192readdata(WriteBuf, ReadBuf, 3);	   //do not transfer the status contents after read data register 
		DataBuffer = 0x00;
		DataBuffer = (DataBuffer<<8) + ReadBuf[0];	
		DataBuffer = (DataBuffer<<8) + ReadBuf[1];
		DataBuffer = (DataBuffer<<8) + ReadBuf[2];
  }

	return DataBuffer;
}

void AD7192ExitContinuousRead()
{
	unsigned char WriteBuf[1];
	unsigned char ReadBuf[1];

	while(HAL_GPIO_ReadPin(AD7192_MISO_GPIO_Port,AD7192_MISO_Pin)== 0){;}			
	while(HAL_GPIO_ReadPin(AD7192_MISO_GPIO_Port,AD7192_MISO_Pin)== 1){;}			//	waiting the 1st RDY failling edge;即DOUT变为低电平。

	WriteBuf[0]	= WEN|RW_R|(REG_DATA<<3)|CREAD_DIS;

	AD7192readdata(WriteBuf, ReadBuf, 1);		
}
